--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # build and publish in parallel: linux/amd64
-        goos: [linux, darwin, windows]
+        goos: [darwin]
         goarch: [amd64]
     steps:
       - uses: actions/checkout@v2
-      - name: Run tests
+      - uses: actions/setup-go@v2
+        with:
+          go-version: "^1.17.0"
+      - name: Run build
         run: ./build.sh
       - uses: elgohr/Github-Release-Action@master
         env:
